--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script>
+/*
 // Wait for Cordova to load
     //
     document.addEventListener("deviceready", onDeviceReady, false);
@@ -36,7 +37,26 @@
         alert('code: '    + error.code    + '\n' +
                 'message: ' + error.message + '\n');
     }
+*/
+var onSuccess = function(position) {
+    alert('Latitude: '          + position.coords.latitude          + '\n' +
+          'Longitude: '         + position.coords.longitude         + '\n' +
+          'Altitude: '          + position.coords.altitude          + '\n' +
+          'Accuracy: '          + position.coords.accuracy          + '\n' +
+          'Altitude Accuracy: ' + position.coords.altitudeAccuracy  + '\n' +
+          'Heading: '           + position.coords.heading           + '\n' +
+          'Speed: '             + position.coords.speed             + '\n' +
+          'Timestamp: '         + position.timestamp                + '\n');
+};
 
+// onError Callback receives a PositionError object
+//
+function onError(error) {
+    alert('code: '    + error.code    + '\n' +
+          'message: ' + error.message + '\n');
+}
+
+navigator.geolocation.getCurrentPosition(onSuccess, onError);
 </script>
 </head>
 
