--- a/index.html
+++ b/index.html
@@ -65,6 +65,6 @@ navigator.geolocation.getCurrentPosition(onSuccess, onError);
     <img src="img/limecat.jpg" width="244" height="207" alt="limecat" longdesc="img/limecat.jpg" /><br/><br/>
     
     <h1>Geolocation Details</h1>
-    <p id="geolocation">Finding geolocation...</p>
+    <p id="geolocation">Finding geolocation, hopefully...</p>
 </body>
 </html>
