--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Untitled Document</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
-<script type="text/javascript" charset="utf-8" src="cordova.js"></script>
 <script>
 /*
 // Wait for Cordova to load
@@ -65,6 +64,6 @@ navigator.geolocation.getCurrentPosition(onSuccess, onError);
     <img src="img/limecat.jpg" width="244" height="207" alt="limecat" longdesc="img/limecat.jpg" /><br/><br/>
     
     <h1>Geolocation Details</h1>
-    <p id="geolocation">Finding geolocation, hopefully...</p>
+    <p id="geolocation">Finding geolocation</p>
 </body>
 </html>
